# bmi500-hw

./: README.md
Homework/: README.md
Homework/HW10/: HW10.m  README.md
Homework/HW12/: HW12_main.m  README.md  append_xyz.m  extract_marker_names.m  icd.csv  interpolate_displacement.m  names.m  ncol.m  nrow.m  parent.m  pc1.m  peek.m  preprocess_marker_data.m  read_trc.m  rename_trc.m  stem.m  tremor_analysis.m
Homework/HW13/: Chanci_HW13.ipynb  README.md  outcomes.csv
Homework/HW2/: Chanci_Matlab_Profile.m  Chanci_Python_Profile.py
Homework/HW3/: Chanci_MATLAB_Code.m  README.md
Homework/HW4/: Chanci_BMI500_HW4.py  README.md  requirements.txt
Homework/HW5/: Chanci_BMI500_HW5.py  README.md
Homework/HW6/: Chanci_BMI500_HW6.py  README.md  combined.pkl  text1  text2
Homework/HW7/: README.md  before_aki.csv  pyproject.toml  setup.cfg
Homework/HW7/src/: cluster.py  get_before_aki.sql  prediction.py
Homework/HW7/src/Chanci_BMI500_HW7_pkg_dchancia.egg-info/: PKG-INFO  SOURCES.txt
Homework/HW9/: Chanci_BMI500_AutomatedScript.sh  README.md
Homework/HW9/Outputs/: Adrenal_counts.txt  Adrenal_sorted.bam  Brain.counts  Brain_sorted.bam
