[metadata]
name = Chanci_BMI500_HW7-pkg-dchancia
version = 0.0.1
author = Daniela Chanci Arrubla
author_email = author@example.com
description = AKI prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dchancia/Chanci_BMI500/tree/master/Homework/HW7
project_urls =
    Bug Tracker = https://github.com/dchancia/Chanci_BMI500/tree/master/Homework/HW7/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src